add bootstrap, struggling with header, will branch

--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
   </head>
   <body>
+
+    <div class="top">
+      <p>ben</p>
+    </div>
+
+    <div class="main1">
+
+    </div>
+
+    <div class="main2">
+
+    </div>
+
+    <div class="main3">
+
+    </div>
 
   </body>
 </html>
