--- a/index.html
+++ b/index.html
@@ -2,40 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ben Kiggen, Web Dev</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
 
   </head>
   <body>
 
     <div class="jumbotron container">
       <h1 class="logo"><a class= "logo" href="#">bk.</a></h1>
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#">home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+      <h1 class="title">web developer</h1>
+      <nav class="navbar navbar-default">
+        <a href="#">home</a>
+        <a href="#">projects</a>
+        <a href="#">contact</a>
+      </nav>
 
     </div>
 
     <div class="main1">
 
     </div>
-    <div class="container">
-      <h3>Tabs</h3>
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Menu 1</a></li>
-        <li><a href="#">Menu 2</a></li>
-        <li><a href="#">Menu 3</a></li>
-      </ul>
-      <br>
 
-    </div>
+
+
   </body>
 </html>
