--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ben Kiggen, Web Dev</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -11,22 +10,29 @@
   </head>
   <body>
 
-    <div class="jumbotron container">
-      <h1 class="logo"><a class= "logo" href="#">bk.</a></h1>
-      <h1 class="title">web developer</h1>
-      <nav class="navbar navbar-default">
-        <a href="#">home</a>
-        <a href="#">projects</a>
-        <a href="#">contact</a>
-      </nav>
-
+    <div class="jumbotron">
+      <h1 class="logo"><a class= "logo" href="index.html">bk.</a></h1>
     </div>
 
-    <div class="main1">
-
+    <div class="subhead">
+      <h2>Ben Kiggen</h2>
+      <h3 class="">Web Developer Based in Portland, OR</h3>
     </div>
 
-
-
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4panel panel-default">
+          <div class="panel-heading">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-xs-4">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
