--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Ben Kiggen, Web Dev</title>
+    <title>Ben Kiggen, Web Developer</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
@@ -15,16 +15,14 @@
     </div>
 
     <div class="subhead">
-      <h2>Ben Kiggen</h2>
-      <h3 class="">Web Developer Based in Portland, OR</h3>
+      <h2>Ben Kiggen, Web Developer</h2>
     </div>
 
+    <h1 class="titles">Recent Work:</h1>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4panel panel-default">
-          <div class="panel-heading">
+        <div class="col-xs-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
         </div>
         <div class="col-xs-4">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
