play more with colors, add footer, add navbar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
   </head>
   <body>
 
+    <div class="headbar">
+      <ol>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About Me</a></li>
+      </ol>
+    </div>
     <div class="jumbotron">
       <h1 class="logo"><a class= "logo" href="index.html">bk.</a></h1>
+
     </div>
 
     <div class="subhead">
@@ -53,7 +61,7 @@
         </div>
         <div class="col-xs-4">
           <img src="images/vacation.png" class="projimage" alt="Breakdance Island Site">
-          <h3>Breakdance Island</h3>
+          <h3>Island Tour</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <div class="well">
             <h5>Technologies Used:</h5>
@@ -66,6 +74,10 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="footer">
+
     </div>
   </body>
 </html>
