polish css, add links

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
   </head>
   <body>
 
     <div class="headbar">
       <ol>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About Me</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="about_me.html">About Me</a></li>
       </ol>
     </div>
     <div class="jumbotron">
@@ -65,19 +66,26 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <div class="well">
             <h5>Technologies Used:</h5>
-            <ul class="">
+            <ul>
               <li>HTML</li>
               <li>CSS</li>
               <li>Bootstrap</li>
               <li>Git</li>
             </ul>
           </div>
+
         </div>
+
+      </div>
+      <div class="formore">
+        <h5>For more, check out my <a href="projects.html">projects</a>&nbsppage!</h5>
       </div>
     </div>
 
     <div class="footer">
-
+      <i class="fab fa-github"></i>
+      <i class="fab fa-linkedin"></i>
+      <p>Ⓒ Ben Kiggen, 2018</p>
     </div>
   </body>
 </html>
