add more to about me and projects section, tinker with css, starting to look ok

--- a/about_me.html
+++ b/about_me.html
@@ -23,6 +23,47 @@
       <h1 class="logo"><a class= "logo" href="index.html">bk.</a></h1>
     </div>
 
+    <h1 class="titles">About Me:</h1>
+    <div class="panel panel-default interests">
+      <div class="panel-heading">
+        <h2>Interests:</h2>
+      </div>
+      <div class="panel-body">
+        <p>I am passionate about learning. I want to know everything about everything. That the human mind can create a working model of the world, that shapes on paper can translate other people's models into mine, and that I can have any sense that those things are going on is what I <strong>live</strong> for. Computers are fascinating to me because they're humanity's attempt at recreating that inner world in something inorganic.</p>
+      </div>
+    </div>
+
+    <div class="panel panel-default interests">
+      <div class="panel-heading">
+        <h2>Skills:</h2>
+      </div>
+      <div class="panel-body">
+        <p>I'm something of a <em>dabbler.</em> Something of a dirty word, I know, but I wear the moniker with pride. While I'm not having deep conversations in<span class="dirty"> Spanish, Korean, German, Turkish, and Japanese,</span>, I can order a beer and hail a cab in any of those languages. While I'm no Yo Yo Ma, I can make the guitar, ukulele, piano, drums, and bass sound pretty nice. And while I  </p>
+      </div>
+    </div>
+
+    <div class="panel panel-default interests">
+      <div class="panel-heading">
+        <h2>Background:</h2>
+      </div>
+      <div class="panel-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="footer">
       <i class="fab fa-github"></i>
