--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,106 @@
       <h1 class="logo"><a class= "logo" href="index.html">bk.</a></h1>
     </div>
 
+    <h1 class="titles">Work:</h1>
+    <h4 class="titles">(click image for GitHub Repository)</h4>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4">
+          <a href="https://github.com/bkiggen/vacation"><img src="images/vacation.png" class="projimage" alt=""></a>
+          <h3>Dream Vacation</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="well">
+            <h5>Technologies Used:</h5>
+            <ul class="">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <a href="https://github.com/bkiggen/wiki"><img src="images/wiki.png" class="projimage" alt=""></a>
+          <h3>Fake Wikipedia</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="well">
+            <h5>Technologies Used:</h5>
+            <ul class="">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <a href="https://github.com/bkiggen/breakdance-island"><img src="images/breakdance.png" class="projimage" alt=""></a>
+          <h3>Island Tour</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="well">
+            <h5>Technologies Used:</h5>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4">
+          <a href="https://github.com/bkiggen/decor"><img src="images/decor.png" class="projimage" alt=""></a>
+          <h3>Interior Decor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="well">
+            <h5>Technologies Used:</h5>
+            <ul class="">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <a href="https://github.com/bkiggen/boring"><img src="images/boring.png" class="projimage" alt=""></a>
+          <h3>Boring Lecture</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="well">
+            <h5>Technologies Used:</h5>
+            <ul class="">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <a href="https://github.com/bkiggen/animal"><img src="images/animal.png" class="projimage" alt=""></a>
+          <h3>Animal Shelter</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="well">
+            <h5>Technologies Used:</h5>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>Git</li>
+            </ul>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
 
     <div class="footer">
       <i class="fab fa-github"></i>
