--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     </div>
 
     <div class="footer">
-      <i class="fab fa-github"></i>
-      <i class="fab fa-linkedin"></i>
+      <a href="https://github.com/bkiggen/"><i class="fab fa-github"></i></a>
+      <a href="http://linkedin.com/in/bkiggen"><i class="fab fa-linkedin"></i></a>
       <p>Ⓒ Ben Kiggen, 2018</p>
     </div>
   </body>
