add real text to about me section

--- a/about_me.html
+++ b/about_me.html
@@ -38,7 +38,7 @@
         <h2>Skills:</h2>
       </div>
       <div class="panel-body">
-        <p>I'm something of a <em>dabbler.</em> Something of a dirty word, I know, but I wear the moniker with pride. While I'm not having deep conversations in<span class="dirty"> Spanish, Korean, German, Turkish, and Japanese,</span>, I can order a beer and hail a cab in any of those languages. While I'm no Yo Yo Ma, I can make the guitar, ukulele, piano, drums, and bass sound pretty nice. And while I  </p>
+        <p>I'm something of a <em>dabbler.</em> Something of a dirty word, I know, but I wear the moniker with some pride. While I'm not having deep conversations in<span class="dirty"> Spanish, Korean, German, Turkish, and Japanese,</span> I can order a beer and hail a cab in any of those languages. While I'm no Yo Yo Ma, I can make the <span class="dirty">guitar, ukulele, piano, drums, and bass </span> sound pretty nice. And while I don't yet have one coding language <em>mastered</em>, I am well on my way to developing skills in <span class="dirty">git, github, html, css, javascript, and react.</span></p>
       </div>
     </div>
 
@@ -47,7 +47,10 @@
         <h2>Background:</h2>
       </div>
       <div class="panel-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>I began my professional life in the world of <span class="dirty">Psychology</span>. The jobs I held in my early 20's after earning my BA had me managing the daily lives and wellbeings of 33 people with severe, chronic mental illness. It was intense and fascinating and rewarding.</p>
+        <p>After leaving psychology, I came upon an opportunity to live and work in <span class="dirty">South Korea</span>. I was a preschool teacher at an international school in Seoul. It was a great experience and started me on my path to <span class="dirty">education</span>.</p>
+        <p>After Korea, I got my master's degree in education at Concordia University. I then taught 2nd and 3rd grades for <span class="dirty">Portland Public Schools</span>. It was a job I felt really good about and it was hard to leave but I knew I needed a new challenge.</p>
+        <p>So I saved my pennies, studied computers and code, and eventually enrolled in <span class="dirty">Epicodus' React Track</span>. I'm really excited to see what I can learn to create!</p>
       </div>
     </div>
 
