--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/vacation"><img src="images/vacation.png" class="projimage" alt=""></a>
           <h3>Dream Vacation</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>This project asked us to create a site that advertised packages to our dream location. My partner and I chose Thailand and created packages to motorbike around the country. The main point of this project was to explore bootstrap, especially the grid.</p>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
@@ -44,7 +44,7 @@
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/wiki"><img src="images/wiki.png" class="projimage" alt=""></a>
           <h3>Fake Wikipedia</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Fake Wikipedia was our big bootstrap challenge. We were asked to combine all our knowledge of bootstrap, especially some of the grid mechanics, to (as faithfully as we could pull off) recreate the homepage of wikipedia. While we didn't get it dead on, it turned out a lot better looking that I thought it was going to half-way though building it!</p>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
@@ -58,13 +58,12 @@
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/breakdance-island"><img src="images/breakdance.png" class="projimage" alt=""></a>
           <h3>Island Tour</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>The Island Tour project came before our exploration into bootsrap. We were attampting to create a landing page with floats and text-align as our main layout tools. </p>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
-              <li>Bootstrap</li>
               <li>Git</li>
             </ul>
           </div>
@@ -78,13 +77,12 @@
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/decor"><img src="images/decor.png" class="projimage" alt=""></a>
           <h3>Interior Decor</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>The Interior Decorator project was another pre-bootstrap project in which we used floats and relative positioning to guide our layouts. </p>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
               <li>HTML</li>
               <li>CSS</li>
-              <li>Bootstrap</li>
               <li>Git</li>
             </ul>
           </div>
@@ -92,27 +90,25 @@
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/boring"><img src="images/boring.png" class="projimage" alt=""></a>
           <h3>Boring Lecture</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>This project is really starting to back us up into the womb. Basic h1s, ps, and imgs to create a pretty basic webpage.</p>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
               <li>HTML</li>
               <li>CSS</li>
-              <li>Bootstrap</li>
               <li>Git</li>
             </ul>
           </div>
         </div>
         <div class="col-xs-4">
-          <a href="https://github.com/bkiggen/animal"><img src="images/animal.png" class="projimage" alt=""></a>
+          <a href="https://github.com/bkiggen/animal"><img src="images/animal.png" class="projimage" alt="animal"></a>
           <h3>Animal Shelter</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>The Animal Shelter website had us using floats to layout our content. There's not a whole lot to it, mostly just an exercise in basic webpage layout.</p>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
-              <li>Bootstrap</li>
               <li>Git</li>
             </ul>
           </div>
