add mail link in footer, update footers across pages

--- a/about_me.html
+++ b/about_me.html
@@ -53,24 +53,10 @@
         <p>So I saved my pennies, studied computers and code, and eventually enrolled in <span class="dirty">Epicodus' React Track</span>. I'm really excited to see what I can learn to create!</p>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="footer">
-      <i class="fab fa-github"></i>
-      <i class="fab fa-linkedin"></i>
+      <a href="https://github.com/bkiggen/"><i class="fab fa-github"></i></a>
+      <a href="http://linkedin.com/in/bkiggen"><i class="fab fa-linkedin"></i></a>
+      <a href="mailto:benkiggen@gmail.com?Subject=Mr. Kiggen, I Presume"><i class="fas fa-envelope"></i></a>
       <p>Ⓒ Ben Kiggen, 2018</p>
     </div>
   </body>
