--- a/projects.html
+++ b/projects.html
@@ -112,17 +112,13 @@
               <li>Git</li>
             </ul>
           </div>
-
         </div>
-
       </div>
-
     </div>
-
-
     <div class="footer">
-      <i class="fab fa-github"></i>
-      <i class="fab fa-linkedin"></i>
+      <a href="https://github.com/bkiggen/"><i class="fab fa-github"></i></a>
+      <a href="http://linkedin.com/in/bkiggen"><i class="fab fa-linkedin"></i></a>
+      <a href="mailto:benkiggen@gmail.com?Subject=Mr. Kiggen, I Presume"><i class="fas fa-envelope"></i></a>
       <p>Ⓒ Ben Kiggen, 2018</p>
     </div>
   </body>
