--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div class="footer">
       <a href="https://github.com/bkiggen/"><i class="fab fa-github"></i></a>
       <a href="http://linkedin.com/in/bkiggen"><i class="fab fa-linkedin"></i></a>
+      <a href="mailto:benkiggen@gmail.com?Subject=Mr. Kiggen, I Presume"><i class="fas fa-envelope"></i></a>
       <p>Ⓒ Ben Kiggen, 2018</p>
     </div>
   </body>
