--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="row">
             <div class="col-xs-4">
-              <a href="https://github.com/bkiggen/vacation"><img src="images/vacation.png" class="projimage" alt=""></a>
+              <a href="https://github.com/bkiggen/vacation"><img src="images/vacation.jpg" class="projimage" alt=""></a>
               <h3>Dream Vacation</h3>
               <p>This project asked us to create a site that advertised packages to our dream location. My partner and I chose Thailand and created packages to motorbike around the country. The main point of this project was to explore bootstrap, especially the grid.</p>
               <div class="well">
@@ -47,7 +47,7 @@
               </div>
             </div>
             <div class="col-xs-4">
-              <a href="https://github.com/bkiggen/wiki"><img src="images/wiki.png" class="projimage" alt=""></a>
+              <a href="https://github.com/bkiggen/wiki"><img src="images/wiki.jpg" class="projimage" alt=""></a>
               <h3>Fake Wikipedia</h3>
               <p>Fake Wikipedia was our big bootstrap challenge. We were asked to combine all our knowledge of bootstrap, especially some of the grid mechanics, to (as faithfully as we could pull off) recreate the homepage of wikipedia. While we didn't get it dead on, it turned out a lot better looking that I thought it was going to half-way though building it!</p>
               <div class="well">
@@ -61,7 +61,7 @@
               </div>
             </div>
             <div class="col-xs-4">
-              <a href="https://github.com/bkiggen/breakdance-island"><img src="images/breakdance.png" class="projimage" alt=""></a>
+              <a href="https://github.com/bkiggen/breakdance-island"><img src="images/breakdance.jpg" class="projimage" alt=""></a>
               <h3>Island Tour</h3>
               <p>The Island Tour project came before our exploration into bootsrap. We were attampting to create a landing page with floats and text-align as our main layout tools. </p>
               <div class="well">
