--- a/projects.html
+++ b/projects.html
@@ -29,8 +29,10 @@
       <div class="row">
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/vacation"><img src="images/vacation.jpg" class="projimage" alt="dream vacation site"></a>
-          <h3>Dream Vacation</h3>
-          <p>This project asked us to create a site that advertised packages to our dream location. My partner and I chose Thailand and created packages to motorbike around the country. The main point of this project was to explore bootstrap, especially the grid.</p>
+          <div class="column-box">
+            <h3>Dream Vacation</h3>
+            <p>This project asked us to create a site that advertised packages to our dream location. My partner and I chose Thailand and created packages to motorbike around the country. The main point of this project was to explore bootstrap, especially the grid.</p>
+          </div>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
@@ -43,8 +45,10 @@
         </div>
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/wiki"><img src="images/wiki.jpg" class="projimage" alt="fake wikipedia site"></a>
-          <h3>Fake Wikipedia</h3>
-          <p>Fake Wikipedia was our big bootstrap challenge. We were asked to combine all our knowledge of bootstrap, especially some of the grid mechanics, to (as faithfully as we could pull off) recreate the homepage of wikipedia. While we didn't get it dead on, it turned out a lot better looking that I thought it was going to half-way though building it!</p>
+          <div class="column-box">
+            <h3>Fake Wikipedia</h3>
+            <p>Fake Wikipedia was our big bootstrap challenge. We were asked to combine all our knowledge of bootstrap, especially some of the grid mechanics, to (as faithfully as we could pull off) recreate the homepage of wikipedia. While we didn't get it dead on, it turned out a lot better looking that I thought it was going to half-way though building it!</p>
+          </div>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
@@ -57,8 +61,10 @@
         </div>
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/breakdance-island"><img src="images/breakdance.jpg" class="projimage" alt="breakdance island site"></a>
-          <h3>Island Tour</h3>
-          <p>The Island Tour project came before our exploration into bootsrap. We were attampting to create a landing page with floats and text-align as our main layout tools. </p>
+          <div class="column-box">
+            <h3>Island Tour</h3>
+            <p>The Island Tour project came before our exploration into bootsrap. We were attampting to create a landing page with floats and text-align as our main layout tools. </p>
+          </div>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul>
@@ -76,8 +82,10 @@
       <div class="row">
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/decor"><img src="images/decor.jpg" class="projimage" alt="interior decorator site"></a>
-          <h3>Interior Decor</h3>
-          <p>The Interior Decorator project was another pre-bootstrap project in which we used floats and relative positioning to guide our layouts. </p>
+          <div class="column-box2">
+            <h3>Interior Decor</h3>
+            <p>The Interior Decorator project was another pre-bootstrap project in which we used floats and relative positioning to guide our layouts. </p>
+          </div>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
@@ -89,8 +97,10 @@
         </div>
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/boring"><img src="images/boring.jpg" class="projimage" alt="boring lecture site"></a>
-          <h3>Boring Lecture</h3>
-          <p>This project is really starting to back us up into the womb. Basic h1s, ps, and imgs to create a pretty basic webpage.</p>
+          <div class="column-box2">
+            <h3>Boring Lecture</h3>
+            <p>This project is really starting to back us up into the womb. Basic h1s, ps, and imgs to create a pretty basic webpage.</p>
+          </div>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul class="">
@@ -102,8 +112,10 @@
         </div>
         <div class="col-xs-4">
           <a href="https://github.com/bkiggen/animal"><img src="images/animal.jpg" class="projimage" alt="animal site"></a>
-          <h3>Animal Shelter</h3>
-          <p>The Animal Shelter website had us using floats to layout our content. There's not a whole lot to it, just an exercise in basic webpage layout.</p>
+          <div class="column-box2">
+            <h3>Animal Shelter</h3>
+            <p>The Animal Shelter website had us using floats to layout our content. There's not a whole lot to it, just an exercise in basic webpage layout.</p>
+          </div>
           <div class="well">
             <h5>Technologies Used:</h5>
             <ul>
