--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Ben Kiggen, Web Developer</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=raleway" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="headbar">
-      <ol>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about_me.html">About Me</a></li>
-      </ol>
-    </div>
-    <div class="jumbotron">
-      <h1 class="logo"><a class= "logo" href="index.html">bk.</a></h1>
-    </div>
-    <div class="subhead">
-      <h2>Ben Kiggen, Web Developer</h2>
-      <img src="images/ben.jpg" alt="Ben Kiggen">
-    </div>
-    <h1 class="titles">Recent Work:</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-4">
-          <a href="https://github.com/bkiggen/vacation"><img src="images/vacation.jpg" class="projimage" alt=""></a>
-          <div class="column-box">
-            <h3>Dream Vacation</h3>
-            <p>This project asked us to create a site that advertised packages to our dream location. My partner and I chose Thailand and created packages to motorbike around the country. The main point of this project was to explore bootstrap, especially the grid.</p>
-          </div>
-          <div class="well">
-            <h5>Technologies Used:</h5>
-            <ul class="">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Bootstrap</li>
-              <li>Git</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-xs-4">
-          <a href="https://github.com/bkiggen/wiki"><img src="images/wiki.jpg" class="projimage" alt=""></a>
-          <div class="column-box">
-            <h3>Fake Wikipedia</h3>
-            <p>Fake Wikipedia was our big bootstrap challenge. We were asked to combine all our knowledge of bootstrap, especially some of the grid mechanics, to (as faithfully as we could pull off) recreate the homepage of wikipedia. While we didn't get it dead on, it turned out a lot better looking that I thought it was going to half-way though building it!</p>
-          </div>
-          <div class="well">
-            <h5>Technologies Used:</h5>
-            <ul class="">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Bootstrap</li>
-              <li>Git</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-xs-4">
-          <a href="https://github.com/bkiggen/breakdance-island"><img src="images/breakdance.jpg" class="projimage" alt=""></a>
-          <div class="column-box">
-            <h3>Island Tour</h3>
-            <p>The Island Tour project came before our exploration into bootsrap. We were attampting to create a landing page with floats and text-align as our main layout tools. </p>
-          </div>
-          <div class="well">
-            <h5>Technologies Used:</h5>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Git</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="formore">
-        <h5>For more, check out my <a href="projects.html">projects</a>&nbsppage!</h5>
-      </div>
-    </div>
-    <div class="footer">
-      <a href="https://github.com/bkiggen/"><i class="fab fa-github"></i></a>
-      <a href="http://linkedin.com/in/bkiggen"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:benkiggen@gmail.com?Subject=Mr. Kiggen, I Presume"><i class="fas fa-envelope"></i></a>
-      <p>Ⓒ Ben Kiggen, 2018</p>
-    </div>
-  </body>
-</html>
+<img src="images/Resume.png" alt="">
